--- a/about.html
+++ b/about.html
@@ -44,17 +44,12 @@ li a:hover:not(.active) {
   <li><a href="log.html">Log in</a></li>
 
 </ul>
+<center>
+<section style=" width: 800px; height: 900px; background-color: white; padding-top: 160px; font-size: 60px ">
+	
+	"Life is really simple, but we insist on making it complicated."
 
-<section style=" width: 800px; height: 900px; background-color: white; padding-top: 100px; font-size: 20px; margin-left: 280px">
-	<section style="float: left; padding-left: 200px">
-    <img src="pic.jpg" style="width: 250px; height: 300px; padding-left: 20px"> <br> <br>
-	Name: Wen Jee Lumayog Rife <br>
-	Birthdate: August 22, 1999 <br>
-	Address: Purok-5 Murallon, Gingoog City <br>
-	Contact Number: 09873645321 <br>
-  E-mail: Rifewenjee@gmail.com
-  </section>
 </section>
-
+</center>
 </body>
 </html>
