--- a/log.html
+++ b/log.html
@@ -44,17 +44,19 @@ li a:hover:not(.active) {
   <li><a href="log.html">Log in</a></li>
 
 </ul>
+<center>
+<section style=" width: 800px; height: 900px; background-color: white; padding-top: 160px; font-size: 20px ">
 
-<section style=" width: 800px; height: 900px; background-color: white; padding-top: 100px; font-size: 20px; margin-left: 280px">
-	<section style="float: left; padding-left: 200px">
-    <img src="pic.jpg" style="width: 250px; height: 300px; padding-left: 20px"> <br> <br>
-	Name: Wen Jee Lumayog Rife <br>
-	Birthdate: August 22, 1999 <br>
-	Address: Purok-5 Murallon, Gingoog City <br>
-	Contact Number: 09873645321 <br>
-  E-mail: Rifewenjee@gmail.com
-  </section>
+
+    LOG IN FORM <br> <br>
+Username: &nbsp <input type="text" name="" style="padding: 5px"> <br><br>
+Password: &nbsp <input type="text" name="" style="padding: 5px"> <br><br>
+<button style="padding: 9px; font-size: 15px">LOG IN</button>
+
+
+	
+
 </section>
-
+</center>
 </body>
 </html>
