--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ li a:hover:not(.active) {
 }
 
 .active {
-  background-color: #4CAF50;
+  background-color: green;
 }
 </style>
 </head>
@@ -46,8 +46,9 @@ li a:hover:not(.active) {
 </ul>
 
 <section style=" width: 800px; height: 900px; background-color: white; padding-top: 100px; font-size: 20px; margin-left: 280px">
-	<section style="float: left; padding-left: 200px">
-    <img src="pic.jpg" style="width: 250px; height: 300px; padding-left: 20px"> <br> <br>
+  <section style="float: left; padding-left: 200px">
+    <h1>PROFILE</h1>
+    <img src="download.jpg" style="width: 250px; height: 300px; padding-left: 20px"> <br> <br>
 	Name: Wen Jee Lumayog Rife <br>
 	Birthdate: August 22, 1999 <br>
 	Address: Purok-5 Murallon, Gingoog City <br>
